--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   server:
-    image: 'dockerhub_id/server:latest'
+    image: 'gameswithwords/server:latest'
     build:
       context: ./server
       dockerfile: Dockerfile
@@ -10,7 +10,7 @@ services:
     links:
       - 'api:api'
   api:
-    image: 'dockerhub_id/api:latest'
+    image: 'gameswithwords/api:latest'
     expose:
       - '3000'
     build:
@@ -33,7 +33,7 @@ services:
     ports:
       - '8080:15672'
   db-worker:
-    image: 'dockerhub_id/db-worker:latest'
+    image: 'gameswithwords/db-worker:latest'
     build:
       context: ./db-worker
       dockerfile: Dockerfile
@@ -61,7 +61,7 @@ services:
     ports:
       - '5432:5432'
   cron:
-    image: 'dockerhub_id/cron:latest'
+    image: 'gameswithwords/cron:latest'
     build:
       context: ./cron
       dockerfile: Dockerfile
@@ -72,7 +72,7 @@ services:
       - message-queue
       - 'db:db'
   transactiondb:
-    image: 'dockerhub_id/transactiondb:latest'
+    image: 'gameswithwords/transactiondb:latest'
     build:
       context: ./
       dockerfile: Dockerfile.transactiondb
@@ -83,18 +83,18 @@ services:
       - '5432'
     ports:
       - '5433:5432'
-  ListenerQuiz:
-    image: 'dockerhub_id/listenerquiz:latest'
+  listener-quiz:
+    image: 'gameswithwords/listener-quiz:latest'
     build:
-      context: ./workers/ListenerQuiz
+      context: ./workers/listener-quiz
       dockerfile: Dockerfile
     volumes:
-      - './workers/ListenerQuiz:/usr/src/app'
+      - './workers/listener-quiz:/usr/src/app'
     command: bash start.debug.sh
     depends_on:
       - message-queue
     environment:
       - 'AMPQ_ADDRESS=amqp://message-queue:5672'
-      - QUEUE=ListenerQuiz
+      - QUEUE=listener-quiz
     links:
       - message-queue
