--- a/rancher-compose.yml
+++ b/rancher-compose.yml
@@ -3,38 +3,32 @@ services:
   cron:
     scale: 1
     start_on_create: true
-  api-balancer:
+  load-balancer:
     scale: 1
     start_on_create: true
     lb_config:
       certs: []
       port_rules:
-      - hostname: ''
-        path: /api
-        priority: 1
+      - path: ''
+        protocol: http
+        service: server
+        source_port: 80
+        target_port: 80
+      - path: /api
         protocol: http
         service: api
         source_port: 80
         target_port: 3000
-      - path: ''
-        priority: 2
-        protocol: http
-        service: nginx
-        source_port: 80
-        target_port: 80
     health_check:
       healthy_threshold: 2
       response_timeout: 2000
       port: 42
       unhealthy_threshold: 3
       interval: 2000
-  message-queue:
-    scale: 1
-    start_on_create: true
   db-worker:
     scale: 1
     start_on_create: true
-  nginx:
+  server:
     scale: 1
     start_on_create: true
   api:
@@ -49,6 +43,23 @@ services:
       interval: 2000
       strategy: none
       reinitializing_timeout: 60000
-  worker:
+  message-queue:
+    metadata:
+      message-queue: *id001
+    scale: 1
+    start_on_create: true
+  message-queue-datavolume:
+    metadata:
+      message-queue: &id001
+        config:
+          node.name: $${HOSTNAME}
+    scale: 1
+    start_on_create: true
+  message-queue-base:
+    metadata:
+      message-queue: *id001
+    scale: 1
+    start_on_create: true
+  listener-quiz:
     scale: 1
     start_on_create: true
