use cron to remove listener quiz users without responses; submodules

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -10,14 +10,20 @@ services:
     command:
       - bash
       - start.sh
+    labels:
+      io.rancher.scheduler.global: 'true'
   cron:
     image: gameswithwords/server:latest
     environment:
       - AMPQ_ADDRESS=amqp://message-queue:5672
+      - API_ADDRESS=http://api:3000/api
       - DATABASE_URL=postgres://gww:Amwtb2016!@gww-db.cjto8h4s9y7b.us-east-1.rds.amazonaws.com:5432/gww_db
       - TRANSACTION_DATABASE_URL=postgres://gww:Amwtb2016!@gww-transactions-db.cjto8h4s9y7b.us-east-1.rds.amazonaws.com:5432/gww_transactions_db
     links:
       - message-queue
+      - api
+    labels:
+      io.rancher.scheduler.global: 'true'
   db-worker:
     image: gameswithwords/db-worker:latest
     environment:
@@ -30,6 +36,8 @@ services:
     command:
       - bash
       - start.sh
+    labels:
+      io.rancher.scheduler.global: 'true'
   load-balancer:
     image: rancher/lb-service-haproxy
     ports:
@@ -48,6 +56,7 @@ services:
     volumes_from:
     - message-queue-datavolume
     labels:
+      io.rancher.scheduler.global: 'true'
       io.rancher.sidekicks: message-queue-base,message-queue-datavolume
       io.rancher.container.hostname_override: container_name
   message-queue-base:
@@ -73,6 +82,8 @@ services:
       io.rancher.container.hostname_override: container_name
   server:
     image: gameswithwords/server:latest
+    labels:
+      io.rancher.scheduler.global: 'true'
   listener-quiz:
     image: gameswithwords/listener-quiz:latest
     command: bash start.sh
@@ -83,3 +94,5 @@ services:
       - QUEUE=listener-quiz
     links:
       - message-queue
+    labels:
+      io.rancher.scheduler.global: 'true'
