--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -24,10 +24,14 @@ services:
       dockerfile: Dockerfile
     environment:
       - AMPQ_ADDRESS=amqp://message-queue:5672
+      - API_ADDRESS=http://api:3000/api
       - DATABASE_URL=postgres://postgres@db:5432/dev
+      - TRANSACTION_DATABASE_URL=postgres://postgres@transactiondb:5432/transactions-dev
     links:
       - message-queue
       - db
+      - transactiondb
+      - api
   db:
     image: postgres:latest
     environment:
