--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -13,7 +13,7 @@ services:
     labels:
       io.rancher.scheduler.global: 'true'
   cron:
-    image: gameswithwords/server:latest
+    image: gameswithwords/cron:latest
     environment:
       - AMPQ_ADDRESS=amqp://message-queue:5672
       - API_ADDRESS=http://api:3000/api
