--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -17,8 +17,8 @@ services:
     environment:
       - AMPQ_ADDRESS=amqp://message-queue:5672
       - API_ADDRESS=http://api:3000/api
-      - DATABASE_URL=postgres://gww:Amwtb2016!@gww-db.cjto8h4s9y7b.us-east-1.rds.amazonaws.com:5432/gww_db
-      - TRANSACTION_DATABASE_URL=postgres://gww:Amwtb2016!@gww-transactions-db.cjto8h4s9y7b.us-east-1.rds.amazonaws.com:5432/gww_transactions_db
+      - DATABASE_URL=INSERT_HERE
+      - TRANSACTION_DATABASE_URL=INSERT_HERE
     links:
       - message-queue
       - api
@@ -28,8 +28,8 @@ services:
     image: gameswithwords/db-worker:latest
     environment:
       - AMPQ_ADDRESS=amqp://message-queue:5672
-      - DATABASE_URL=postgres://gww:Amwtb2016!@gww-db.cjto8h4s9y7b.us-east-1.rds.amazonaws.com:5432/gww_db
-      - TRANSACTION_DATABASE_URL=postgres://gww:Amwtb2016!@gww-transactions-db.cjto8h4s9y7b.us-east-1.rds.amazonaws.com:5432/gww_transactions_db
+      - DATABASE_URL=INSERT_HERE
+      - TRANSACTION_DATABASE_URL=INSERT_HERE
       - NODE_ENV=production
     links:
       - message-queue
