--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "db-worker"]
 	path = db-worker
 	url = https://github.com/pushkin-consortium/db-worker.git
-[submodule "react-components"]
-	path = react-components
-	url = https://github.com/pushkin-consortium/react-components.git
 [submodule "server"]
 	path = server
 	url = https://github.com/pushkin-consortium/server.git
@@ -13,6 +10,9 @@
 [submodule "cron"]
 	path = cron
 	url = https://github.com/pushkin-consortium/cron.git
-[submodule "workers"]
-	path = workers
-	url = https://github.com/pushkin-consortium/workers.git
+[submodule "experiments"]
+	path = experiments
+	url = git@github.com:pushkin-consortium/experiments.git
+[submodule "front-end"]
+	path = front-end
+	url = git@github.com:pushkin-consortium/front-end.git
