--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,58 +1,86 @@
 version: '2'
 services:
-  cron:
-    image: 'pushkinl3/games-with-words-cron:latest'
+  api:
+    image: 'pushkin/api:latest'
     environment:
       - 'AMPQ_ADDRESS=amqp://message-queue:5672'
-      - 'DATABASE_URL=DB_URL'
-      - 'TRANSACTION_DATABASE_URL=T_DB_URL'
+      - NODE_ENV=production
     links:
-      - 'message-queue:message-queue'
-  api-balancer:
-    image: 'rancher/lb-service-haproxy:v0.4.9'
-    ports:
-      - '80:80/tcp'
-      - '8080:8080/tcp'
+      - message-queue
+    command:
+      - bash
+      - start.sh
     labels:
+      io.rancher.scheduler.global: 'true'
+  cron:
+    image: 'pushkin/cron:latest'
+    environment:
+      - 'AMPQ_ADDRESS=amqp://message-queue:5672'
+      - 'API_ADDRESS=http://api:3000/api'
+      - DATABASE_URL=INSERT_HERE
+      - TRANSACTION_DATABASE_URL=INSERT_HERE 
+    links:
+      - message-queue
+      - api
+    labels:
+      io.rancher.scheduler.global: 'true'
+  db-worker:
+    image: 'pushkin/db-worker:latest'
+    environment:
+      - 'AMPQ_ADDRESS=amqp://message-queue:5672'
+      - DATABASE_URL=INSERT_HERE
+      - TRANSACTION_DATABASE_URL=INSERT_HERE
+      - NODE_ENV=production
+    links:
+      - message-queue
+    command:
+      - bash
+      - start.sh
+    labels:
+      io.rancher.scheduler.global: 'true'
+  load-balancer:
+    image: rancher/lb-service-haproxy
+    ports:
+      - '80'
+      - '443'
+    labels:
+      io.rancher.scheduler.global: 'true'
       io.rancher.container.agent.role: environmentAdmin
       io.rancher.container.create_agent: 'true'
   message-queue:
-    image: rabbitmq
-    expose:
-      - '5672'
-  db-worker:
-    image: 'pushkinl3/games-with-words-db-worker:latest'
+    image: 'pushkin/message-queue:latest'
     environment:
-      - 'AMPQ_ADDRESS=amqp://message-queue:5672'
-      - 'DATABASE_URL=DB_URL'
-      - 'TRANSACTION_DATABASE_URL=T_DB_URL'
-      - NODE_ENV=production
-    links:
-      - 'message-queue:message-queue'
-    command:
-      - bash
-      - start.sh
+      CONFD_ARGS: '--interval 5'
+      RABBITMQ_CLUSTER_PARTITION_HANDLING: autoheal
+      RABBITMQ_NET_TICKTIME: '60'
+    volumes_from:
+      - message-queue-datavolume
     labels:
-      io.rancher.container.pull_image: always
-  nginx:
-    image: 'pushkinl3/games-with-words-nginx:latest'
-    links:
-      - 'api:api'
-    ports:
-      - '80:80/tcp'
-    labels:
-      io.rancher.container.pull_image: always
-  api:
-    image: 'pushkinl3/games-with-words-api:latest'
+      io.rancher.scheduler.global: 'true'
+      io.rancher.sidekicks: 'message-queue-base,message-queue-datavolume'
+      io.rancher.container.hostname_override: container_name
+  message-queue-base:
+    image: 'rabbitmq:3.6-management'
     environment:
-      - 'AMPQ_ADDRESS=amqp://message-queue:5672'
-      - NODE_ENV=production
-    links:
-      - 'message-queue:message-queue'
-    expose:
-      - '3000'
-    command:
-      - bash
-      - start.sh
+      RABBITMQ_ERLANG_COOKIE: message-queue-cookie
+    entrypoint:
+      - /opt/rancher/bin/run.sh
+    network_mode: 'container:message-queue'
+    volumes_from:
+      - message-queue-datavolume
     labels:
-      io.rancher.container.pull_image: always
+      io.rancher.container.hostname_override: container_name
+  message-queue-datavolume:
+    image: 'rabbitmq:3.6-management'
+    entrypoint:
+      - /bin/true
+    volumes:
+      - /etc/rabbitmq
+      - /opt/rancher/bin
+    labels:
+      io.rancher.container.start_once: 'true'
+      io.rancher.container.hostname_override: container_name
+  server:
+    image: 'pushkin/server:latest'
+    labels:
+      io.rancher.scheduler.global: 'true'
