--- a/rancher-compose.yml
+++ b/rancher-compose.yml
@@ -1,44 +1,6 @@
 version: '2'
 services:
-  cron:
-    scale: 1
-    start_on_create: true
-  api-balancer:
-    scale: 1
-    start_on_create: true
-    lb_config:
-      certs: []
-      port_rules:
-      - hostname: ''
-        path: /api
-        priority: 1
-        protocol: http
-        service: api
-        source_port: 80
-        target_port: 3000
-      - path: ''
-        priority: 2
-        protocol: http
-        service: nginx
-        source_port: 80
-        target_port: 80
-    health_check:
-      healthy_threshold: 2
-      response_timeout: 2000
-      port: 42
-      unhealthy_threshold: 3
-      interval: 2000
-  message-queue:
-    scale: 1
-    start_on_create: true
-  db-worker:
-    scale: 1
-    start_on_create: true
-  nginx:
-    scale: 1
-    start_on_create: true
   api:
-    scale: 1
     start_on_create: true
     health_check:
       healthy_threshold: 2
@@ -49,6 +11,59 @@ services:
       interval: 2000
       strategy: none
       reinitializing_timeout: 60000
-  worker:
+  cron:
+    scale: 1
+    start_on_create: true
+  db-worker:
+    scale: 1
+    start_on_create: true
+  load-balancer:
+    scale: 1
+    start_on_create: true
+    lb_config:
+      config: |-
+        frontend http-frontend
+            bind *:80
+            mode http
+            redirect scheme https code 302 if !{ ssl_fc }
+      default_cert: pushkin
+      port_rules:
+      - protocol: http
+        selector: dummy
+        source_port: 80
+      - path: ''
+        protocol: https
+        service: server
+        source_port: 443
+        target_port: 80
+      - path: /api
+        protocol: https
+        service: api
+        source_port: 443
+        target_port: 3000
+    health_check:
+      healthy_threshold: 2
+      response_timeout: 2000
+      port: 42
+      unhealthy_threshold: 3
+      interval: 2000
+  message-queue:
+    metadata:
+      message-queue: *id001
+    scale: 1
+    start_on_create: true
+  message-queue-base:
+    metadata:
+      message-queue: *id001
+    scale: 1
+    start_on_create: true
+  message-queue-datavolume:
+    metadata:
+      message-queue: &id001
+        config:
+          node.name: $${HOSTNAME}
+    scale: 1
+    start_on_create: true
+  server:
     scale: 1
     start_on_create: true
